tests-system/int-literals-8/output
T test1 { v = 0x
              ^^ int-literals-8/foo.trlc:5: error: unfinished base 16 integer
Processed 1 model, 0 checks and 1 requirement file and found 1 error
